--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,6 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "git@github.com:select2/kevingiesuebel/select2.git"
+        "url": "git@github.com:select2/select2.git"
     }
 }
